# Thinkerbell_prod

./: .dockerignore  .gitattributes  .gitignore  DOCKER_PRODUCTION_GUIDE.md  DOCKER_SETUP_COMPLETE.md  Makefile  docker-compose.yml
Thinkerbell_template_pipeline/: .gitignore  ENHANCED_SYSTEM_README.md  FAISS_SYSTEM_README.md  IMPORT_UPDATES.md  README.md  SEMANTIC_CLASSIFICATION_FIXES.md  STAGE2_README.md  STAGE3_COMPLETE.md  STAGE4_COMPLETE.md  SYNC_RUNNER_README.md  SYNTHETIC_DATASET_README.md  chunk_generator.py  dataset_loader.py  dataset_validation.py  demo_enhanced_system.py  diagnose_overfitting.py  eda_chunks.py  enhanced_labeling_system.py  enhanced_split_chunks.py  enhanced_synthetic_generator.py  enhanced_train_encoder.py  enhanced_train_pipeline.py  eval_encoder.py  evaluate_holdout.py  faiss_integration_demo.py  file_sync_runner.py  generate_individual_files.py  generate_training_dataset.py  individual_file_generator.py  normalize_docs_to_md.py  package.json  quick_validation.py  requirements.txt  run_enhanced_pipeline.py  run_semantic_training.py  setup.py  setup_faiss_system.py  setup_linux.sh  split_chunks.py  stage2_integration_test.py  (+14 more)
Thinkerbell_template_pipeline/Blueprints/: # Thinkerbell Authentic Style Guide.md  Semantic_backend_bridge.md  Semantic_formating_engine.md  Thinkerbell Python Backend Server Blueprint.txt  WEBAPP_GUIDE.md  template_content_pipeline.md  thinkerbell_frontend_bp.md
Thinkerbell_template_pipeline/eda_results/: summary.json
Thinkerbell_template_pipeline/examples/: complete-integration-demo.js  semantic-demo.js  template-substitution.js
Thinkerbell_template_pipeline/faiss_system/: run_stage3_validation.py  stage3_quick_validation.py
Thinkerbell_template_pipeline/synthetic_dataset/: config.yaml  dataset_manifest.json  dataset_metadata.json  tb_001_000.json  tb_001_001.json  tb_001_002.json  tb_001_003.json  tb_001_004.json  tb_001_005.json  tb_001_006.json  tb_001_007.json  tb_001_008.json  tb_001_009.json  tb_001_010.json  tb_001_011.json  tb_001_017.json  tb_001_021.json  tb_001_023.json  tb_001_026.json  tb_001_027.json  tb_001_029.json  tb_001_032.json  tb_001_033.json  tb_001_035.json  tb_001_036.json  tb_001_038.json  tb_001_041.json  tb_001_042.json  tb_001_048.json  tb_001_049.json  tb_001_052.json  tb_001_054.json  tb_001_055.json  tb_001_062.json  tb_001_065.json  tb_001_066.json  tb_001_068.json  tb_001_071.json  tb_001_072.json  tb_001_073.json  (+4705 more)
config/: thinkerbell.yaml
logs/: train_20250812_121304.jsonl
requirements/: base.txt  dev.txt  prod.txt
style_profiles/: complex_tech.json  medium_food.json  simple_fashion.json
tb_dataset/: README.md  __init__.py  __main__.py  business_preamble.py  business_rules.py  business_rules_fixed.py  chunk.py  clean.py  cli_generate.py  cli_ingest.py  cli_pack.py  cli_synthetic.py  dedup.py  demo_complete_preamble_workflow.py  demo_preamble_example.py  demo_preamble_workflow.py  device_utils.py  eda.py  example.py  example_generation.py  example_preamble_generation.py  example_unified_preamble.py  generate.py  ingest.py  mapping_diagnostics.py  ood.py  preamble_generator.py  preamble_schema.py  preamble_tone.py  preamble_validator.py  pyproject.toml  schema.py  split.py  structured_preamble.py  style_generator.py  style_influenced_generator.py  synthetic_preamble.py  template_ingestor.py  test_structured_preamble.py  utils.py
thinkerbell/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.build.json  vite.config.ts
thinkerbell/public/: mockServiceWorker.js
thinkerbell/src/: App.tsx  index-simple.css  index.css  main.tsx
thinkerbell_output/: config.yaml  dataset_metadata.json
thinkerbell_output/cache/: mapping_failures.json
thinkerbell_output/diagnostics/: mapping_diagnostics.json  pipeline_stats.json
thinkerbell_output/style_profiles/: profile_AMAZON _ PBDD Talent Agreement - Jackie Gillies DRAFT  (1).json  profile_AMAZON _ PBDD Talent Agreement - Jackie Gillies DRAFT .json  profile_Dove Advanced Care Body Wash  Launch_Jhyll Teplin Agreement.json  profile_GWM _ WSL CarPool Jack Robinson Agreement_DRAFT.json  profile_Golden Gaytime x Keith Schleiger Talent Agreement.json  profile_HORT _ Australian Onions Talent Agreement - Jane De Graaff.json  profile_Koala Agreement - Dr. David Cunnington.json  profile_Mattel Brickshop x Craig Contract FINAL.docx LOWNDES SIGNED (1) (1).json  profile_QUEEN _ The Condos Talent Agreement_21.02.25 [SIGNED].json  profile_QUEEN _ The Tanna Tribe Talent Agreement_UPDATED_24.02.2025 [SIGNED].json  profile_Rexona _ WBD Foot Model Talent Agreement.json  profile_TKB Influencer Agreement_Jamie Durie x Cabot_s EasyDeck.json  (+1 more)
(+15231 files in other folders)
